@@ -50,6 +50,7 @@ New Features
 [BEAM-1151] - Geometry subset operator
 
 Improvements
+[BEAM-1263] - All processors shall provide help and "about" information
 [BEAM-1234] - The target product of some operators shall not be written
 [BEAM-1231] - gpt command-line tool should have a 'parallelism' option
 [BEAM-1221] - Need an option to configure multi-threading
